# quantum-spacetime-unified-theory

./: .coverage  .gitattributes  .gitignore  01-parameter-specification-v4.1.md  09-CODE_OF_CONDUCT.md  CHANGELOG.md  CONTRIBUTORS.md  GITHUB_SETUP.md  LICENSE  README.md  README.md.bak  example_usage.py  push_to_github.sh  pyproject.toml  requirements.txt  setup.py
.github/: labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  theory_issue.md
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml  tests.yml  theory-validation.yml
config/: example_config.yaml
docs/: 02-mathematical-framework-v4.1.md  03-physical-interpretation-v4.2.md  04-numerical-simulation-guide-v4.2.md  05-observational-predictions-v4.2.md  06-dwarf-galaxy-solution-v4.2.md  07-SPARC-test-results-v4.5.md  08-CONTRIBUTING.md
docs/source/: conf.py  index.md
notebooks/: 00-quick-start.ipynb
qst_v451_documentation/: QST v4.5.1 與 v4.1 完整對照表.txt  修復總結_v4.5.1.md  參數規範_v4.5.1.md  測試記錄_v4.5.1.1.md  版本信息_v4.5.1.md  理論框架_v4.5.1.md  視界質量定理的嚴格數學證明與數值模擬框架.txt  量子时空统一理论（QST）核心思想档案.txt
scripts/: quick_start.py  run_all_validations.py
scripts/validation/: validate_numerical_stability.py  validate_observational_matches.py  validate_parameter_boundaries.py  validate_theoretical_consistency.py
src/core/: physics_constants.py  qst_calculator.py  qst_calculator_correct.py  qst_calculator_final.py  qst_calculator_fixed.py  qst_calculator_fixed_final.py  qst_calculator_v41.py  qst_calculator_v45_final.py  qst_calculator_v45_fixed.py
tests/: test_qst_calculator.py  test_qst_calculator_simple.py
